# WMBE

./: .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: pypi-publish.yml
notebooks/: Application.ipynb  ChannelWall.ipynb  Data.ipynb  Simulation.ipynb  Simulation_plot.ipynb  Theory.ipynb  WeatheringMediatedErosion1d.ipynb  essentials.py  index.html
python-package/applications/channel1d/: index.html
python-package/channel1d/: index.html
python-package/file/: index.html
python-package/misc/file/: index.html
python-package/model/: index.html
python-package/numerical/model/: index.html
python-package/numerical/solve1d/: index.html
python-package/numerical/utils/: index.html
python-package/serialize/: index.html
python-package/solve1d/: index.html
python-package/theory/: index.html
python-package/theory/equations/: index.html
python-package/theory/symbols/: index.html
python-package/viz/applications/: index.html
python-package/viz/base/: index.html
python-package/viz/data/: index.html
python-package/viz/simulations/: index.html
python-package/viz_applications/: index.html
python-package/viz_base/: index.html
python-package/viz_data/: index.html
python-package/viz_simulations/: index.html
search/: search_index.json
src/wmbe/: __init__.py  channel1d.py  data.py  file.py  initialize.py  model.py  plot.py  save.py  solve1d.py  solve1p1d.py  symbols.py  theory.py  viz.py  viz_applications.py  viz_base.py  viz_data.py  viz_simulations.py
src/wmbe/applications/: channel1d.py
src/wmbe/misc/: file.py  serialize.py
src/wmbe/numerical/: model.py  solve1d.py  utils.py
src/wmbe/theory/: equations.py  symbols.py
src/wmbe/viz/: applications.py  base.py  data.py  simulations.py
web/: mkdocs.yml
web/docs/: index.md  style.css
web/docs/javascripts/: extra.js  mathjax.js
web/docs/notebooks/: Data.ipynb  index.md
web/docs/python-package/: channel1d.md  file.md  index.md  model.md  serialize.md  solve1d.md  theory.md  utils.md  viz.md  viz_applications.md  viz_base.md  viz_data.md  viz_simulations.md
web/docs/python-package/applications/: channel1d.md
web/docs/python-package/misc/: file.md  serialize.md
web/docs/python-package/numerical/: model.md  solve1d.md  utils.md
web/docs/python-package/theory/: equations.md  symbols.md
web/docs/python-package/viz/: applications.md  base.md  data.md  simulations.md
web/site/: 404.html  index.html  objects.inv  sitemap.xml
web/site/notebooks/: Theory.ipynb
web/site/python-package/channel1d/: index.html
web/site/python-package/file/: index.html
web/site/python-package/model/: index.html
web/site/python-package/serialize/: index.html
web/site/python-package/solve1d/: index.html
web/site/search/: search_index.json
(+18 files in other folders)
