[project]
name = "wmbe"
version = "0.1.2"
description = "Tools for simulating the weathering-mediated erosion of bedrock"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Jupyter",
  "Framework :: MkDocs",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.14"
dependencies = [
    "numpy", "matplotlib", "sympy", "scipy", "pandas", "jupyter", "ipython", "openpyxl"
]
authors = [{ name = 'Colin P. Stark', email = 'cstarkjp@gmail.com' }]
keywords = [
  "geomorphology",
  "erosion",
  "bedrock",
  "weathering",
]

[project.urls]
homepage = "https://cstarkjp.github.io/WMBE"
repository = "https://github.com/cstarkjp/WMBE"
documentation = "https://cstarkjp.github.io/WMBE"
# "Bug Tracker" = "https://github.com/cstarkjp/WMBE"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true