[project]
name = "wmbe"
version = "0.1.24"
description = "Tools for modeling the weathering-mediated erosion of bedrock. The focus is on environments with no soil or talus accumulation: for example, on steep bedrock channel walls. The current treatment is 1d only, and it assumes an exponentially decaying weakening profile with depth into the rock."
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Jupyter",
  "Framework :: MkDocs",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.14"
dependencies = [
    "numpy", 
    "matplotlib", 
    "sympy", 
    "scipy", 
    "pandas", 
    "jupyter", 
    "ipython", 
    "openpyxl",
    "tqdm"
]
authors = [{ name = 'Colin P. Stark', email = 'cstarkjp@gmail.com' }]
keywords = [
  "geomorphology",
  "erosion",
  "bedrock",
  "weathering",
]

[project.urls]
homepage = "https://cstarkjp.github.io/WMBE"
repository = "https://github.com/cstarkjp/WMBE"
documentation = "https://cstarkjp.github.io/WMBE"
# "Bug Tracker" = "https://github.com/cstarkjp/WMBE"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true